# ZIA

./: CMakeLists.txt  README.md  conanfile.txt  config.json
includes/: BasicModule.hpp  Handler.hpp  ModuleImg.hpp  network.hpp  queue.hpp  threadFunction.hpp  zia.hpp
includes/QueueManagement/: IRequestInputQueue.hpp  IResponseOutputQueue.hpp  RequestInputQueue.hpp  RequestOutputQueue.hpp  ResponseInputQueue.hpp  ResponseOutputQueue.hpp
includes/configManager/: Config.hpp  ConfigManagement.hpp  IConfigManagement.hpp
includes/network/: connection.hpp  coreNetwork.hpp  server.hpp
includes/network/HeaderParsing/: HeaderParsing.hpp  IHeaderParsing.hpp
src/: BasicModule.cpp  Handler.cpp  ModuleImg.cpp  loadDll.cpp  main.cpp
src/QueueManagement/: RequestInputQueue.cpp  RequestOutputQueue.cpp  ResponseInputQueue.cpp  ResponseOutputQueue.cpp
src/configManagement/: ConfigManagement.cpp
src/network/: connection.cpp  coreNetwork.cpp  server.cpp
src/network/HeaderParsing/: HeaderParsing.cpp
